Atualização Curso RobotFramework - 22-01-2025

--- a/WebTesting/log.html
+++ b/WebTesting/log.html
@@ -2071,25 +2071,25 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,3935],[],[[5,0,6,[7,8],[1,462,3447],[[1,9,10,0,0,0,0,0,[1,464,1964],[[0,11,12,0,13,14,0,0,[1,466,1909],[[466,2,15]]],[0,16,12,0,17,0,0,0,[1,2376,51],[]]]],[0,18,10,0,0,0,0,0,[1,2429,1463],[[0,19,12,0,20,21,0,0,[1,2429,1345],[[2430,2,22]]],[0,23,12,0,24,25,0,0,[1,3774,117],[]]]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,12219],[],[[5,0,6,[7,8],[1,418,11799],[[1,9,10,0,0,0,0,0,[1,419,6873],[[0,11,12,0,13,14,0,0,[1,421,6578],[[422,2,15]]],[0,16,12,0,17,0,0,0,[1,6999,292],[]]]],[0,18,10,0,0,0,0,0,[1,7292,1940],[[0,19,12,0,20,21,0,0,[1,7293,1448],[[7294,2,22]]],[0,23,12,0,24,25,0,0,[1,8743,490],[]]]],[0,26,10,0,0,0,0,0,[1,9233,2759],[[0,27,12,0,28,25,0,0,[1,9234,2758],[[9235,2,29]]]]],[0,30,10,0,0,0,0,0,[1,11995,221],[[0,31,12,0,32,33,0,0,[1,11996,82],[]],[0,23,12,0,24,34,0,0,[1,12079,137],[]]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Amazon Testes","*c:\\Users\\Anderson Saldanha\\Desktop\\CursoRobotFramework\\RobotFramework\\WebTesting\\amazon_testes.robot","eNqzSVTIKEpNs1VKy8xJtdLX13e20g8tTi0q1nfMSwFS+XmqRgbBiTkpiXkZifouqcXZJfkF+s6lQJmg/KT8EreixNzU8vyibH00bnhqUkhqcUlmXrp+Ym5iVX5efAmQm1qsVwRSp2RHX/ts9BPtACAxVpo=","*<p>Essa suite testa o site da Amazon.com.br\x3c/p>","*Caso de Teste 01 - Acesso ao menu &quot;Eletrônicos&quot;","*<p>Esse teste verifica o menu Eletrônicos do site da Amazon.com.br e verifica a categoria Computadores e Informática\x3c/p>","*categorias","*menus","*Abrir o navegador","*amazon_resources","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*browser=chrome","*Opening browser 'chrome' to base url 'None'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Acessar a home page do site Amazon.com.br","*Go To","*<p>Navigates the current browser window to the provided <code>url\x3c/code>.\x3c/p>","*url=${URL}","*Opening url '<a href=\"http://www.amazon.com.br\">http://www.amazon.com.br\x3c/a>'","*Wait Until Element Is Visible","*<p>Waits until the element <code>locator\x3c/code> is visible.\x3c/p>","*locator=${MENU_ELETRONICOS}"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Amazon Testes","*c:\\Users\\Anderson Saldanha\\Desktop\\CursoRobotFramework\\RobotFramework\\WebTesting\\amazon_testes.robot","eNqzSVTIKEpNs1VKy8xJtdLX13e20g8tTi0q1nfMSwFS+XmqRgbBiTkpiXkZifouqcXZJfkF+s6lQJmg/KT8EreixNzU8vyibH00bnhqUkhqcUlmXrp+Ym5iVX5efAmQm1qsVwRSp2RHX/ts9BPtACAxVpo=","*<p>Essa suite testa o site da Amazon.com.br\x3c/p>","*Caso de Teste 01 - Acesso ao menu &quot;Eletrônicos&quot;","*<p>Esse teste verifica o menu Eletrônicos do site da Amazon.com.br e verifica a categoria Computadores e Informática\x3c/p>","*categorias","*menus","*Abrir o navegador","*amazon_resources","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*browser=firefox","*Opening browser 'firefox' to base url 'None'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Acessar a home page do site Amazon.com.br","*Go To","*<p>Navigates the current browser window to the provided <code>url\x3c/code>.\x3c/p>","*url=${URL}","*Opening url '<a href=\"http://www.amazon.com.br\">http://www.amazon.com.br\x3c/a>'","*Wait Until Element Is Visible","*<p>Waits until the element <code>locator\x3c/code> is visible.\x3c/p>","*locator=${MENU_ELETRONICOS}","*Entrar no menu &quot;Eletrônicos&quot;","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*Clicking element '//a[@href='/Eletronicos-e-Tecnologia/b/?ie=UTF8&amp;node=16209062011&amp;ref_=nav_cs_electronics'][contains(.,'Eletrônicos')]'.","*Verificar se aparece a frase &quot;Eletrônicos e Tecnologia&quot;","*Wait Until Page Contains","*<p>Waits until <code>text\x3c/code> appears on the current page.\x3c/p>","*text=${TEXTO_HEADER_ELETRONICOS}","*locator=${HEADER_ELETRONICOS}"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:03","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:03","fail":0,"label":"categorias","pass":1,"skip":0},{"elapsed":"00:00:03","fail":0,"label":"menus","pass":1,"skip":0}],[{"elapsed":"00:00:04","fail":0,"id":"s1","label":"Amazon Testes","name":"Amazon Testes","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:12","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:12","fail":0,"label":"categorias","pass":1,"skip":0},{"elapsed":"00:00:12","fail":0,"label":"menus","pass":1,"skip":0}],[{"elapsed":"00:00:12","fail":0,"id":"s1","label":"Amazon Testes","name":"Amazon Testes","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1737387680401;
+window.output["baseMillis"] = 1737484490090;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 3968;
+window.output["generated"] = 12242;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
